tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__CrystalAssembly-AAAAAAAAAAAAAAAAAAAGrA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1708,
  "prerequisites": [
    1686
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Crystal Assembly is a LuV Circuit.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lCrystal Assembly",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1686
  ],
  "rewards": [],
  "tasks": []
}
