tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__CrystalChips-AAAAAAAAAAAAAAAAAAAGlw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1687,
  "prerequisites": [
    1683,
    1689,
    1213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make these chips you need Europium, as well as an HV Autoclave in the Asteroids dimension (or on your space station) to achieve \"low gravity\".\n\n[note]Alternatively you can use an Industrial Autoclave.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lCrystal Chips",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1683,
    1689,
    1213
  ],
  "rewards": [],
  "tasks": []
}
