tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__Crystalprocessor-AAAAAAAAAAAAAAAAAAAGlg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1686,
  "prerequisites": [
    2608,
    1249,
    1522,
    1688,
    2602
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you're this far into LuV, you can make easier IV circuits, as well as your first UV circuit.\n\nAfter crafting each circuit, make an imprint of it to reduce the cost of following ones.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lCrystal Processors",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2608,
    1249,
    1522,
    1688,
    2602
  ],
  "rewards": [],
  "tasks": []
}
