tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__EtherStrike-AAAAAAAAAAAAAAAAAAALaQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2921,
  "prerequisites": [
    1493
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The naquadah is so inert that most acids won't react with it, so you need a more powerful kind of acid to dissolve it.\n\nLet's prepare some necessary organic solvent to make the acid.\n\n[warn]If you have already created the Naquadah line, hold 64 Naquadah Ingot / Dust to skip these quests.[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lEther Strike!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1493
  ],
  "rewards": [],
  "tasks": []
}
