tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__FetchQuests-AAAAAAAAAAAAAAAAAAAKKA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2600,
  "prerequisites": [
    1683
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make the Circuit Assembly Line imprints you'll need a bunch of new materials.\n\nTo start, let's get some raw materials, Prasiolite, Cubic Zirconia, and Tellurium.\n\nYou also need some other materials, but I don't need to explain those, do I?\n\n[note]If the materials are too much of a pain, you can replicate some of them once you have one of it.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lFetch Quests",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1683
  ],
  "rewards": [],
  "tasks": []
}
