tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__FetchingCubicZir-AAAAAAAAAAAAAAAAAAAKLA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2604,
  "prerequisites": [
    2600
  ],
  "properties": {
    "auto_claim": false,
    "desc": "For Cubic Zirconia, you'll need to combine Zirconium and Yttrium Oxide in the EBF as well. Fortunately you only need the dusts.\n\nYou can get Zirconium from:\n1) The Red Zircon ore on Ross128b <- Do this one\n2) Sifting Cassiterite, Tin, or Ilmenite <- Do this one if you hate Ross\n\nOxygen isn't hard to get, but the Yttrium more than makes up for it. You have a couple options:\n1) Make Rare Earth (I) out of Rare Earth (see the MV quest) and get it out of Xenotime\n2) Make Rare Earth (II) out of Rare Earth using a stronger acid and get it from Yttriaite\n3) When you have a T6 rocket, you can pick some Yttrium ore up from Triton, making you cry at how much easier it is\n4) In ZPM you can try going to the Toxic Everglades to grab weird GT++ ores, some of which have Yttrium in them (Yay RNG ore worldgen!)\n\nTo get Rare Earth you §ocan§r use Redstone or Skystone, but you can also get it out of Monazite directly or some other ores as a byproduct. Hopefully you saved it up?",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lFetching Cubic Zirconia",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2600
  ],
  "rewards": [],
  "tasks": []
}
